feat: [P4PU-539] removed transaction detail (#144)
* removed transcation detail

* removed transcation detail

* removed transcation detail postman

* removed transcation detail postman

* removed transcation detail
